[package]
name = "rpmalloc-rs"
version = "0.1.0"
authors = ["David CARLIER <devnexen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
libc = "*"
